# raznoor.rs

./: .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  ROADMAP.md  clippy.toml  deny.toml  git-conventional-commits.yaml
.github/workflows/: benchmarks.yml  ci.yml
benches/: solver_bench.rs
dev/bench/: data.js
src/: batch.rs  bdf.rs  butcher.rs  bvp.rs  dense.rs  erk.rs  irk.rs  lib.rs  linalg.rs  solver.rs  types.rs  util.rs  utils.rs
src/bvp/: mod.rs  shooting.rs
src/ivp/: bdf.rs  erk.rs  irk.rs  mod.rs
src/sensitivity/: forward.rs  mod.rs
src/solver/: adaptive.rs  core.rs  events.rs  fixed_step.rs  grid.rs  mod.rs
src/types/: error.rs  event.rs  mod.rs  problem.rs  solution.rs
tests/: adaptive.rs  batch.rs  bdf.rs  bvp.rs  dense.rs  edge_cases.rs  events.rs  fixed_step.rs  irk.rs  property_tests.rs  sensitivity.rs
tests/common/: mod.rs
