[package]
name = "raznoor"
version = "0.3.0"
description = "Explicit Runge-Kutta ODE solver for scalar and system initial value problems with event detection"
license = "MIT"
repository = "https://github.com/murenkov/raznoor.rs"
keywords = ["ode", "solver", "runge-kutta", "numerical", "numerical-ode"]
categories = ["mathematics", "science"]
edition = "2024"
rust-version = "1.96"

[lints.rust]
missing_docs = "deny"

[lints.clippy]
all = "deny"
pedantic = "deny"
nursery = "deny"
cargo = "deny"

[dependencies]
ndarray = "0.17.2"
num-traits = "0.2.19"
rayon = { version = "1", optional = true }

[features]
parallel = ["rayon"]

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
proptest = "1"

[[bench]]
name = "solver_bench"
harness = false
